# MineBot

./: README.md  application.py  main.py  pyproject.toml
assets/: formated_recipes.csv  formatted_recipes.csv  player_actions_2025-02-26.csv  system_prompts.csv  system_prompts_closed.csv  system_prompts_open.csv
db/: game_state_db
logs/: chat_history.json
minecraft_assistant/agents/: agent_types.py  agent_utils.py  deepseek.py  llm_agent.py  player_action.py
minecraft_assistant/agents/deepseek/: pydantic_deepseek.py
minecraft_assistant/asr_tts/: .env  asr.py  speech.py
minecraft_assistant/dialogue_space/: SQLdatabase.py  game_datastore.py  message_datastore.py
minecraft_assistant/gradio/: formated_recipes.csv  gradio_ui.py  ui.py
src/Agents/DeepSeek/: environment.yml
src/Dialogue Space/: SQLdatabase.py
src/dialogue_space/: SQLdatabase.py
src/gradio/: __init__.py
tests/: test_datastore.py
