[project]
name = "minecraft-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.17.1",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.41",
    "pytest>=8.3.5",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.2",
]
